k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend-userflow
                port:
                  number: 8000

          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-userflow
                port:
                  number: 80
